--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -410,6 +410,318 @@ jobs:
           echo "Contents:"
           cat modules_list.txt
       
+      - name: Generate API Documentation JSONs
+        if: steps.check_enabled.outputs.enabled == 'true'
+        shell: bash
+        run: |
+          echo "Generating API documentation files..."
+          echo ""
+          
+          # Create Python script to analyze modules and generate JSONs
+          cat > generate_api_docs.py << 'PYEOF'
+          import ast
+          import json
+          import sys
+          from pathlib import Path
+          from typing import Dict, Any, List, Set
+          
+          # Force UTF-8 encoding
+          if sys.platform == 'win32':
+              import io
+              sys.stdout = io.TextIOWrapper(sys.stdout.buffer, encoding='utf-8', errors='replace')
+              sys.stderr = io.TextIOWrapper(sys.stderr.buffer, encoding='utf-8', errors='replace')
+          
+          
+          class APIDocGenerator:
+              """Generates API documentation JSONs from Python source files."""
+              
+              def __init__(self):
+                  self.cli_apis = {}
+                  self.rest_apis = {}
+                  self.licensed_apis = {}
+              
+              def _get_type_annotation(self, annotation) -> str:
+                  """Extract type from annotation node."""
+                  if annotation is None:
+                      return "Any"
+                  
+                  if isinstance(annotation, ast.Name):
+                      return annotation.id
+                  elif isinstance(annotation, ast.Constant):
+                      return str(annotation.value)
+                  elif isinstance(annotation, ast.Subscript):
+                      # Handle List[str], Dict[str, int], etc.
+                      value = self._get_type_annotation(annotation.value)
+                      slice_val = self._get_type_annotation(annotation.slice)
+                      return f"{value}[{slice_val}]"
+                  elif isinstance(annotation, ast.Tuple):
+                      # Handle Tuple types
+                      elements = [self._get_type_annotation(e) for e in annotation.elts]
+                      return f"Tuple[{', '.join(elements)}]"
+                  elif isinstance(annotation, ast.Attribute):
+                      # Handle module.Type annotations
+                      return f"{annotation.attr}"
+                  else:
+                      return "Any"
+              
+              def _extract_function_params(self, func_node: ast.FunctionDef) -> Dict[str, str]:
+                  """Extract function parameters with their types."""
+                  params = {}
+                  
+                  for arg in func_node.args.args:
+                      # Skip 'self' and 'cls'
+                      if arg.arg in ('self', 'cls'):
+                          continue
+                      
+                      param_type = self._get_type_annotation(arg.annotation)
+                      params[arg.arg] = param_type
+                  
+                  return params
+              
+              def _is_cli_decorated(self, func_node: ast.FunctionDef) -> bool:
+                  """Check if function has CLI-related decorators."""
+                  cli_decorators = {'click.command', 'command', 'cli', 'typer.command'}
+                  
+                  for decorator in func_node.decorator_list:
+                      if isinstance(decorator, ast.Name):
+                          if decorator.id in cli_decorators or 'cli' in decorator.id.lower():
+                              return True
+                      elif isinstance(decorator, ast.Attribute):
+                          full_name = f"{decorator.value.id if hasattr(decorator.value, 'id') else ''}.{decorator.attr}"
+                          if full_name in cli_decorators or 'cli' in full_name.lower():
+                              return True
+                      elif isinstance(decorator, ast.Call):
+                          if isinstance(decorator.func, ast.Name):
+                              if decorator.func.id in cli_decorators or 'cli' in decorator.func.id.lower():
+                                  return True
+                          elif isinstance(decorator.func, ast.Attribute):
+                              if 'cli' in decorator.func.attr.lower():
+                                  return True
+                  
+                  return False
+              
+              def _is_rest_decorated(self, func_node: ast.FunctionDef) -> bool:
+                  """Check if function has REST API decorators."""
+                  rest_decorators = {
+                      'route', 'get', 'post', 'put', 'delete', 'patch',
+                      'app.route', 'api.route', 'router.get', 'router.post',
+                      'router.put', 'router.delete', 'router.patch',
+                      'fastapi', 'flask'
+                  }
+                  
+                  for decorator in func_node.decorator_list:
+                      if isinstance(decorator, ast.Name):
+                          if decorator.id in rest_decorators:
+                              return True
+                      elif isinstance(decorator, ast.Attribute):
+                          if decorator.attr in rest_decorators:
+                              return True
+                      elif isinstance(decorator, ast.Call):
+                          if isinstance(decorator.func, ast.Name):
+                              if decorator.func.id in rest_decorators:
+                                  return True
+                          elif isinstance(decorator.func, ast.Attribute):
+                              if decorator.func.attr in rest_decorators:
+                                  return True
+                  
+                  return False
+              
+              def _is_licensed(self, func_node: ast.FunctionDef) -> bool:
+                  """Check if function has license-related decorators or comments."""
+                  # Check decorators
+                  for decorator in func_node.decorator_list:
+                      if isinstance(decorator, ast.Name):
+                          if 'license' in decorator.id.lower() or 'premium' in decorator.id.lower():
+                              return True
+                      elif isinstance(decorator, ast.Call):
+                          if isinstance(decorator.func, ast.Name):
+                              if 'license' in decorator.func.id.lower() or 'premium' in decorator.func.id.lower():
+                                  return True
+                  
+                  # Check docstring
+                  docstring = ast.get_docstring(func_node)
+                  if docstring:
+                      doc_lower = docstring.lower()
+                      if 'license' in doc_lower or 'premium' in doc_lower or 'paid' in doc_lower:
+                          return True
+                  
+                  return False
+              
+              def _extract_class_info(self, class_node: ast.ClassDef) -> Dict[str, Dict[str, str]]:
+                  """Extract methods and their parameters from a class."""
+                  methods = {}
+                  
+                  for node in class_node.body:
+                      if isinstance(node, ast.FunctionDef):
+                          # Skip private methods
+                          if node.name.startswith('_') and not node.name.startswith('__'):
+                              continue
+                          
+                          params = self._extract_function_params(node)
+                          
+                          # Only include if it has parameters or is a public method
+                          if params or not node.name.startswith('_'):
+                              methods[node.name] = params
+                  
+                  return methods
+              
+              def analyze_file(self, filepath: Path):
+                  """Analyze a Python file and extract API information."""
+                  try:
+                      with open(filepath, 'r', encoding='utf-8') as f:
+                          tree = ast.parse(f.read(), filename=str(filepath))
+                  except Exception as e:
+                      print(f"Warning: Could not parse {filepath}: {e}", file=sys.stderr)
+                      return
+                  
+                  module_name = filepath.stem
+                  
+                  # Process classes
+                  for node in ast.walk(tree):
+                      if isinstance(node, ast.ClassDef):
+                          class_name = node.name
+                          methods = self._extract_class_info(node)
+                          
+                          if not methods:
+                              continue
+                          
+                          # Check each method for decorators
+                          for method_node in node.body:
+                              if isinstance(method_node, ast.FunctionDef):
+                                  method_name = method_node.name
+                                  
+                                  # Skip private methods
+                                  if method_name.startswith('_') and not method_name.startswith('__'):
+                                      continue
+                                  
+                                  if method_name not in methods:
+                                      continue
+                                  
+                                  # Categorize based on decorators
+                                  is_cli = self._is_cli_decorated(method_node)
+                                  is_rest = self._is_rest_decorated(method_node)
+                                  is_licensed = self._is_licensed(method_node)
+                                  
+                                  method_info = {method_name: methods[method_name]}
+                                  
+                                  # Add to appropriate categories
+                                  if is_cli:
+                                      if class_name not in self.cli_apis:
+                                          self.cli_apis[class_name] = {}
+                                      self.cli_apis[class_name].update(method_info)
+                                  
+                                  if is_rest:
+                                      if class_name not in self.rest_apis:
+                                          self.rest_apis[class_name] = {}
+                                      self.rest_apis[class_name].update(method_info)
+                                  
+                                  if is_licensed:
+                                      if class_name not in self.licensed_apis:
+                                          self.licensed_apis[class_name] = {}
+                                      self.licensed_apis[class_name].update(method_info)
+                                  
+                                  # If no specific decorator, add to all for completeness
+                                  if not (is_cli or is_rest or is_licensed):
+                                      # Add public methods to CLI by default
+                                      if not method_name.startswith('_'):
+                                          if class_name not in self.cli_apis:
+                                              self.cli_apis[class_name] = {}
+                                          self.cli_apis[class_name].update(method_info)
+                          
+                          # If class has no decorated methods, add all public methods to CLI
+                          if class_name not in self.cli_apis and class_name not in self.rest_apis:
+                              if methods:
+                                  self.cli_apis[class_name] = methods
+              
+              def generate_json_files(self, output_dir: Path):
+                  """Generate the three JSON files."""
+                  output_dir.mkdir(exist_ok=True)
+                  
+                  # Write cli.json
+                  cli_path = output_dir / 'cli.json'
+                  with open(cli_path, 'w', encoding='utf-8') as f:
+                      json.dump(self.cli_apis, f, indent=2, ensure_ascii=False)
+                  print(f"✓ Generated: {cli_path}")
+                  
+                  # Write rest.json
+                  rest_path = output_dir / 'rest.json'
+                  with open(rest_path, 'w', encoding='utf-8') as f:
+                      json.dump(self.rest_apis, f, indent=2, ensure_ascii=False)
+                  print(f"✓ Generated: {rest_path}")
+                  
+                  # Write licensed.json
+                  licensed_path = output_dir / 'licensed.json'
+                  with open(licensed_path, 'w', encoding='utf-8') as f:
+                      json.dump(self.licensed_apis, f, indent=2, ensure_ascii=False)
+                  print(f"✓ Generated: {licensed_path}")
+          
+          
+          def main():
+              # Read modules list
+              with open('modules_list.txt', 'r') as f:
+                  modules = [line.strip() for line in f if line.strip()]
+              
+              print("Analyzing modules for API documentation...")
+              print("")
+              
+              generator = APIDocGenerator()
+              
+              # Analyze each module
+              for module_path in modules:
+                  print(f"Processing: {module_path}")
+                  generator.analyze_file(Path(module_path))
+              
+              print("")
+              print("Generating JSON files...")
+              
+              # Generate JSON files in bin directory
+              output_dir = Path('./bin')
+              generator.generate_json_files(output_dir)
+              
+              print("")
+              print("Summary:")
+              print(f"  CLI APIs: {len(generator.cli_apis)} classes")
+              print(f"  REST APIs: {len(generator.rest_apis)} classes")
+              print(f"  Licensed APIs: {len(generator.licensed_apis)} classes")
+          
+          
+          if __name__ == '__main__':
+              main()
+          PYEOF
+          
+          # Run the API documentation generator
+          export PYTHONIOENCODING=utf-8
+          python generate_api_docs.py
+          
+          echo ""
+          echo "=========================================="
+          echo "API Documentation Files Created"
+          echo "=========================================="
+          
+          # Display file contents
+          if [ -f "./bin/cli.json" ]; then
+            echo ""
+            echo "cli.json preview:"
+            head -30 ./bin/cli.json
+          fi
+          
+          if [ -f "./bin/rest.json" ]; then
+            echo ""
+            echo "rest.json preview:"
+            head -30 ./bin/rest.json
+          fi
+          
+          if [ -f "./bin/licensed.json" ]; then
+            echo ""
+            echo "licensed.json preview:"
+            head -30 ./bin/licensed.json
+          fi
+          
+          echo ""
+          echo "[OK] API documentation generation complete"
+
+
+
       - name: Analyze imports and create minimal requirements
         if: steps.check_enabled.outputs.enabled == 'true'
         shell: bash
